@@ -30,7 +30,7 @@
 
 static const double c_fraction_in_humus = 0.587;
 
-class AdsorptionLinearOld : public AdsorptionLinear
+class AdsorptionLinear : public Adsorption
 {
   // Parameters.
   const double K_d;
@@ -65,19 +65,19 @@ public:
 
   // Create.
 public:
-  AdsorptionLinearOld (const BlockModel& al)
-    : AdsorptionLinear (al),
+  AdsorptionLinear (const BlockModel& al)
+    : Adsorption (al),
       K_d (al.number ("K_d", -1.0)),
       K_clay (al.number ("K_clay", 0.0)),
       K_OC (al.check ("K_OC") ? al.number ("K_OC") : K_clay)
   { }
 };
 
-static struct AdsorptionLinearOldSyntax : DeclareModel
+static struct AdsorptionLinearSyntax : DeclareModel
 {
   Model* make (const BlockModel& al) const
   {
-    return new AdsorptionLinearOld (al);
+    return new AdsorptionLinear (al);
   }
 
   static bool check_alist (const Metalib&, const Frame& al, Treelog& err)
@@ -95,7 +95,7 @@ static struct AdsorptionLinearOldSyntax : DeclareModel
       }
     return ok;
   }
-  AdsorptionLinearOldSyntax ()
+  AdsorptionLinearSyntax ()
     : DeclareModel (Adsorption::component, "linear", "M = rho K C + Theta C")
   { }
   void load_frame (Frame& frame) const
@@ -117,6 +117,6 @@ It is multiplied with the soil organic carbon fraction to get the\n\
 carbon part of the 'K_d' factor.  By default, 'K_OC' is equal to 'K_clay'.");
 
   }
-} AdsorptionLinearOld_syntax;
+} AdsorptionLinear_syntax;
 
 // adsorption_linear.C ends here.
