@@ -25,7 +25,7 @@
 #include "object_model/type.h"
 #include "util/assertion.h"
 #include "object_model/check.h"
-#include "util/function.h"
+#include "object_model/function.h"
 
 Attribute::category
 Type::category () const 
